@@ -1,37 +1,39 @@
 package ru.yandex.practicum.filmorate.controller;
 
 import lombok.RequiredArgsConstructor;
-import org.springframework.http.ResponseEntity;
+import lombok.extern.slf4j.Slf4j;
 import org.springframework.web.bind.annotation.GetMapping;
 import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.RequestMapping;
 import org.springframework.web.bind.annotation.RestController;
-import ru.yandex.practicum.filmorate.dao.GenreDao;
 import ru.yandex.practicum.filmorate.dto.GenreDto;
 import ru.yandex.practicum.filmorate.dto.mapper.GenreDtoMapper;
 import ru.yandex.practicum.filmorate.model.Genre;
+import ru.yandex.practicum.filmorate.service.FilmService;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
+@Slf4j
 @RestController
 @RequestMapping("/genres")
 @RequiredArgsConstructor
 public class GenreController {
 
-    private final GenreDao genreDao;
+    private final FilmService service;
+
+    private final GenreDtoMapper mapper;
 
     @GetMapping
-    public ResponseEntity<List<GenreDto>> getAllGenres() {
-        List<GenreDto> genres = genreDao.getAllGenres().stream()
-                .map(GenreDtoMapper::toDto)
-                .collect(Collectors.toList());
-        return ResponseEntity.ok(genres);
+    public List<GenreDto> findAllGenres() {
+        List<Genre> genres = service.getGenres();
+        return genres.stream()
+                .map(mapper::map)
+                .toList();
     }
 
     @GetMapping("/{id}")
-    public ResponseEntity<GenreDto> getGenreById(@PathVariable Long id) {
-        Genre genre = genreDao.getGenreById(id);
-        return ResponseEntity.ok(GenreDtoMapper.toDto(genre));
+    public GenreDto findGenreById(@PathVariable int id) {
+        Genre genre = service.findGenreById(id);
+        return mapper.map(genre);
     }
 }
