@@ -2,85 +2,105 @@ package ru.yandex.practicum.filmorate.controller;
 
 import jakarta.validation.Valid;
 import lombok.RequiredArgsConstructor;
-import org.springframework.http.ResponseEntity;
-import org.springframework.validation.annotation.Validated;
+import lombok.extern.slf4j.Slf4j;
+import org.springframework.http.HttpStatus;
 import org.springframework.web.bind.annotation.*;
+import ru.yandex.practicum.filmorate.dto.FilmDto;
 import ru.yandex.practicum.filmorate.dto.UserDto;
+import ru.yandex.practicum.filmorate.dto.create.CreateUserDto;
+import ru.yandex.practicum.filmorate.dto.mapper.FilmDtoMapper;
 import ru.yandex.practicum.filmorate.dto.mapper.UserDtoMapper;
-import ru.yandex.practicum.filmorate.interfaces.UserStorage;
+import ru.yandex.practicum.filmorate.model.Feed;
+import ru.yandex.practicum.filmorate.model.Film;
 import ru.yandex.practicum.filmorate.model.User;
+import ru.yandex.practicum.filmorate.service.FilmService;
 import ru.yandex.practicum.filmorate.service.UserService;
 
-import java.util.Collection;
-import java.util.Set;
-import java.util.stream.Collectors;
+import java.util.List;
 
-
+@Slf4j
 @RestController
 @RequestMapping("/users")
-@Validated
 @RequiredArgsConstructor
 public class UserController {
 
-    private final UserStorage userStorage;
     private final UserService userService;
 
-    @PostMapping
-    public UserDto postUser(@RequestBody @Valid UserDto userDto) {
-        User user = UserDtoMapper.toModel(userDto);
-        User createdUser = userStorage.create(user);
-        return UserDtoMapper.toDto(createdUser);
-    }
+    private final FilmService filmService;
+
+    private final UserDtoMapper userMapper;
+
+    private final FilmDtoMapper filmMapper;
 
     @GetMapping
-    public Collection<UserDto> getUsers() {
-        return userStorage.getAll().stream()
-                .map(UserDtoMapper::toDto)
-                .collect(Collectors.toList());
+    public List<UserDto> findAll() {
+        List<User> users = userService.getUsers();
+        return users.stream()
+                .map(userMapper::map)
+                .toList();
     }
 
-    @DeleteMapping("/{id}")
-    public ResponseEntity<Void> deleteUser(@PathVariable Long id) {
-        boolean isDeleted = userStorage.delete(id);
-        return isDeleted ? ResponseEntity.noContent().build() : ResponseEntity.notFound().build();
+    @PostMapping
+    @ResponseStatus(HttpStatus.CREATED)
+    public UserDto create(@Valid @RequestBody CreateUserDto user) {
+        User toCreate = userMapper.map(user);
+        User createdFilm = userService.create(toCreate);
+        return userMapper.map(createdFilm);
     }
 
-    @GetMapping("/{id}")
-    public ResponseEntity<UserDto> getUserById(@PathVariable Long id) {
-        User user = userStorage.getById(id);
-        return user != null ? ResponseEntity.ok(UserDtoMapper.toDto(user)) : ResponseEntity.notFound().build();
-    }
-
-    @GetMapping("/{id}/friends/common/{otherId}")
-    public Set<UserDto> getCommonFriends(@PathVariable Long id, @PathVariable Long otherId) {
-        return userService.getCommonFriends(id, otherId).stream()
-                .map(UserDtoMapper::toDto)
-                .collect(Collectors.toSet());
-    }
-
-    @GetMapping("/{id}/friends")
-    public Set<UserDto> getFriends(@PathVariable Long id) {
-        return userService.listFriends(id).stream()
-                .map(UserDtoMapper::toDto)
-                .collect(Collectors.toSet());
-    }
-
-    @PutMapping("/{id}/friends/{friendId}")
-    public ResponseEntity<UserDto> addFriends(@PathVariable Long id, @PathVariable Long friendId) {
-        User user = userService.addFriend(id, friendId);
-        return ResponseEntity.ok(UserDtoMapper.toDto(user));
-    }
-
-    @DeleteMapping("/{id}/friends/{friendId}")
-    public ResponseEntity<UserDto> deleteFriends(@PathVariable Long id, @PathVariable Long friendId) {
-        User user = userService.removeFriend(id, friendId);
-        return ResponseEntity.ok(UserDtoMapper.toDto(user));
+    @DeleteMapping("/{userId}")
+    public void removeUser(@PathVariable Integer userId) {
+        userService.removeUser(userId);
     }
 
     @PutMapping
-    public ResponseEntity<UserDto> putUser(@RequestBody @Valid UserDto userDto) {
-        User user = UserDtoMapper.toModel(userDto);
-        User updatedUser = userStorage.update(user);
-        return ResponseEntity.ok(UserDtoMapper.toDto(updatedUser));
+    public UserDto updateUser(@Valid @RequestBody UserDto userDto) {
+        User user = userMapper.map(userDto);
+        User updatedUser = userService.updateUser(user);
+        return userMapper.map(updatedUser);
+    }
+
+    @GetMapping("/{id}")
+    public UserDto getUser(@PathVariable int id) {
+        User user = userService.getUser(id);
+        return userMapper.map(user);
+    }
+
+    @PutMapping("/{id}/friends/{friendId}")
+    public void addFriend(@PathVariable Integer id, @PathVariable Integer friendId) {
+        userService.addFriend(id, friendId);
+    }
+
+    @DeleteMapping("/{id}/friends/{friendId}")
+    public void removeFriend(@PathVariable Integer id, @PathVariable Integer friendId) {
+        userService.removeFriend(id, friendId);
+    }
+
+    @GetMapping("/{id}/friends")
+    public List<UserDto> getFriends(@PathVariable Integer id) {
+        return userService.getUserFriends(id).stream()
+                .map(userMapper::map)
+                .toList();
+    }
+
+    @GetMapping("/{id}/friends/common/{otherId}")
+    public List<UserDto> getCommonFriends(@PathVariable Integer id, @PathVariable Integer otherId) {
+        return userService.getCommonFriends(id, otherId).stream()
+                .map(userMapper::map)
+                .toList();
+    }
+
+    @GetMapping("/{id}/recommendations")
+    public List<FilmDto> getRecommendations(@PathVariable Integer id) {
+        List<Film> recommendations = filmService.getFilmRecommendationsForUser(id);
+
+        return recommendations.stream()
+                .map(filmMapper::map)
+                .toList();
+    }
+
+    @GetMapping("/{id}/feed")
+    public List<Feed> getFeed(@PathVariable Integer id) {
+        return userService.getFeedByUserId(id);
     }
 }
